Layout, menu, img-sizing, overflowboxes and wrappers fixed

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,35 @@
 .card{
 display: inline-block;
-border: 0;
+border: 5px;
+border-style: solid;
+margin: 10px;
+border-radius: 15px;
+border-color: black;
+}
+.card-title {
+color: rgb(255,192,90);
+font-weight: 600;
+margin-bottom: 0;
+}
+
+.card-body {
+padding: 7px;
+}
+
+.location {
+font-weight: 100;
+font-size: 15px;
+font-style: italic;
+}
+
+.buttonPriceWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.price {
+    font-weight: 600;
+    padding-right: 20px;
 }
 
 body {
@@ -9,12 +38,45 @@ body {
 
     /*background-size: cover;*/
 }
-
-.images{
+.concertDescriptionShort {
 width: 300px;
-height: 275px;
+height: 100px;
+overflow: hidden;
 }
 
+.detail-description {
+width:450px
+}
+
+.detal-page-image {
+    width: 700px;
+    height: 700px;
+    overflow: hidden;
+}
+.imgDetail {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: auto;
+    height: 100%;
+    }
+.col.detail-page-flex {
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+     }
+.image-wrapper {
+    width: 300px;
+    height: 275px;
+    overflow: hidden;
+   }
+
+.images{
+    width: auto;
+    height: 110%;
+}
+.mb-3.col-2 {
+width: 50%
+}
 
 
 .btn-warning {
@@ -24,4 +86,16 @@ height: 275px;
 
 .logo {
     background: transparent;
+}
+
+.bg-dark {
+    background-color: #212529!important;
+    border-style: solid;
+    border-width: 0 0 5px 0;
+    border-radius: 20px;
+    border-color: rgb(255,192,90);
+   }
+
+.container-fluid {
+width: 80%;
 }
